2025-11-13
    Added API logging to standard WHMCS Module Log for easier access
2025-11-11
    Import only products with servers in stock
2025-11-07
    Control panel URL now depends on API URL region
2025-10-20
    Fixed control panel iframe url
2025-09-16
    Added constant to control RU locations support
2025-09-01
    Added proper transaction management to prevent hanging MySQL transactions during import
2025-08-01
    Added validation in hooks to prevent processing non-Hostkey services
2025-07-30
    Fixed Control Panel not working during automatic product deployment
2025-01-16
    `Hostkey old product` group is not used animore
    Saving import settings
2024-12-04
    When there is not the default currency
2024-12-03
    Debugging, refactoring, and cleaning
2024-10-02
    Using all currencies
2024-09-22
    Improving of next payments
2024-09-10
    Import only RUB or EUR
2024-09-06
    Saving product groups info in a new table
2024-09-03
    Added the ability to add a fixed markup
2024-08-29
    Changed group headline
2024-08-27
    Fixed error 'Function Not Supported by Module'
2024-08-15
    Added the ability to add a markup and round prices
2024-05-17
    Modified database workflow to enhance compatibility with various versions of MySql
2024-05-16
    Modified database workflow to enhance compatibility with various versions of WHMCS.